# guanchang

./: .gitignore  PLAN.md  README.md  docker-compose.yml  start.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/services/: crawler_service.py  graph_service.py  llm_service.py
backend/scripts/: run_crawler.py  seed.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
