[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "openai>=2.30.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
]
